@@ -44,6 +44,9 @@ Open.mnemonic=o
 Open.accelerator.mac=meta O
 Open.accelerator.other=ctrl O
 
+OpenRecent.name=Open Recent
+ClearOpenRecentMenu.name=Clear Menu
+
 Save.name=Save
 Save.mnemonic=s
 Save.accelerator.mac=meta S
