@@ -6,7 +6,9 @@ Version X.X (XXXX-XX-XX)
           is properly reflected and the title bar contains the file icon.
      New: Using the more native file dialog on Mac OS X.
      New: Replaced Add Annotation menus with a dialog and filterable list to aid keyboard usage.
-     New: Added keyboard accelerators for Add Annotation and Add Sub-Region
+     New: Added keyboard accelerators for Add Annotation and Add Sub-Region.
+     New: Added Window menu on Mac OS X.
+     New: Added Open Recent menu.
 
    Fixed: NullPointerException for new notebooks due to a lack of annotations.
    Fixed: Various application behaviour issues for Mac OS X.
